...
    }
  },
  "permissions": {
    "title": "Włącz powiadomienia",
    "message": "Włącz powiadomienia w ustawieniach systemowych, jeśli chcesz otrzymywać przypomnienia, w tym inteligentne przypomnienia, na czas.",
    "openSettings": "Otwórz ustawienia",
    "notNow": "Nie teraz"
  }
}

