appId: com.lkurczab.fitaly
env:
  E2E_EMAIL: e2e@example.com
  E2E_PASSWORD: Test@1234
---
- stopApp
- openLink: __E2E_EXPO_URL__
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Reload"
    commands:
      - tapOn: "Close"
      - waitForAnimationToEnd
- runFlow:
    when:
      visible: "Nie teraz"
    commands:
      - tapOn: "Nie teraz"
- runFlow:
    when:
      visible: "Not Now"
    commands:
      - tapOn: "Not Now"
- assertVisible:
    id: e2e-booted
- runFlow:
    when:
      visible: "Reload"
    commands:
      - tapOn: "Close"
      - waitForAnimationToEnd
- openLink: fitaly://e2e/reset?logout=1
- assertVisible:
    id: e2e-ready-login
- assertVisible:
    id: login-email-input
- tapOn:
    id: login-email-input
- eraseText
- inputText: ${E2E_EMAIL}
- tapOn:
    id: login-password-input
- eraseText
- inputText: ${E2E_PASSWORD}
- tapOn:
    id: login-submit-button
- runFlow:
    when:
      visible: "Nie teraz"
    commands:
      - tapOn: "Nie teraz"
- runFlow:
    when:
      visible: "Not Now"
    commands:
      - tapOn: "Not Now"
- assertVisible:
    id: tab-home
